--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Thư Giản Giả Trí
-url: "https://henhobinhduong.com"
+url: "https://iloves.club/"
 baseurl:
 google_analytics_key:
 newsletter_action:
@@ -18,7 +18,7 @@ author:
 social:
   name: Truyện Cười 
   links:
-    - https://henhobinhduong.com
+    - https://iloves.club/
 
 # -----
 # Build
